--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
     }
     @media screen and (min-width:1200px) {
         html {
-            font-size: 100%;
+            font-size: 90%;
         }
         body {
             line-height: 2.4;
@@ -75,20 +75,23 @@ header {
     top: 0;
     z-index: 10;
 }
+
+
 @media screen and (min-width:800px) {
+    header {
+        padding: 1em;
+    }
+}
+@media screen and (min-width:1200px) {
     header {
         padding: 1.3em;
     }
 }
 
-@media screen and (min-width:800px) {
-        header {
-            padding: 1em;
-        }
-    }
 header div img {
     margin-bottom: 20px;
 }
+
 header nav ul {
     margin: 0;
 }
@@ -97,9 +100,9 @@ header nav li {
     display: inline-block;
     margin-right: 10px;
 }
-    header nav li:last-child {
-        margin-right: 0;
-    }
+header nav li:last-child {
+    margin-right: 0;
+}
 header nav li a {
     color: white;
     text-decoration: none;
@@ -118,11 +121,11 @@ main {
     padding: 2em 1em;
     margin-bottom:1.5em ;
 }
-    @media screen and (min-width:700px) {
-        main {
-            padding: 2em;
-        }
+@media screen and (min-width:700px) {
+    main {
+        padding: 2em;
     }
+}
 
 section { 
     background-color: #e3e3e3;
@@ -143,7 +146,7 @@ section h2 {
     left: 5%;
     padding: 0 1em;
     box-shadow: 1px 1px 2px #333;
-
+    
 }
 
 /* ELEMENTI NEL MAIN - ARTICLE */
@@ -170,7 +173,7 @@ h1 + p {
     content: "";
     clear: both;
     display: table;
-  }
+}
 ul, ol {
     margin-left: 2em;
 }
@@ -198,16 +201,16 @@ iframe {
 table {
     margin-bottom: 2em;
 }
-    @media screen and (min-width:500px) {
-        table {
-            margin: 0 auto 2em;
-        }
+@media screen and (min-width:500px) {
+    table {
+        margin: 0 auto 2em;
     }
-    @media screen and (min-width:700px) {
-        table {
-            width: 70%;
-        }
+}
+@media screen and (min-width:700px) {
+    table {
+        width: 70%;
     }
+}
 
 caption {
     font-weight: bold;
@@ -247,20 +250,20 @@ button {
     color: white;
     font-weight: bold;
 }
-    @media screen and (min-width:500px) {
-        input {
-            display: inline-block;
-            width: 70%;
-        }
+@media screen and (min-width:500px) {
+    input {
+        display: inline-block;
+        width: 70%;
     }
-    @media screen and (min-width:700px) {
-        input {
-            padding: 15px;
-        }
-        button {
-            padding: 15px 30px;
-        }
+}
+@media screen and (min-width:700px) {
+    input {
+        padding: 15px;
     }
+    button {
+        padding: 15px 30px;
+    }
+}
 
 /* ELEMENTI NELL' ASIDE */
 aside h2 {
@@ -294,11 +297,11 @@ footer {
     text-align: center;
     font-size: 1.2rem;
 }
-    @media screen and (min-width:800px) {
-        footer {
-            padding: 1em 12em;
-        }
+@media screen and (min-width:800px) {
+    footer {
+        padding: 1em 12em;
     }
+}
 
 footer a {
     color: fuchsia;
@@ -318,7 +321,7 @@ footer a {
         font-size: 24px;
         padding: 0;
         background-image: none;
-    
+        
     }
     main {
         box-shadow: none;
@@ -332,3 +335,47 @@ footer a {
     }
 }
 
+#aside-content {
+    background-color: transparent;
+    border: none;
+}
+
+
+@media screen and (min-width:500px) {
+    #headercontent {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    #aside-content {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        font-size: smaller;
+        padding: 0;
+    }
+    #aside-content div {
+        margin: 0 4px;
+        flex-basis: 32%;
+    }
+}
+
+@media screen and (min-width:800px) {
+    main {
+        display: flex;
+    }
+    aside {
+        min-width: 35%;
+    }
+    article {
+        max-width: 70%;
+        margin: 0 4vw 0 1vw;
+    }
+    #aside-content {
+        flex-direction: column;
+    } 
+    #aside-content div {
+        margin: 6px 0;
+        flex-basis: 32%;
+    }
+} 
